// SPDX-FileCopyrightText: Copyright (c) 2021-2023 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
// SPDX-License-Identifier: LicenseRef-NvidiaProprietary
//
// NVIDIA CORPORATION, its affiliates and licensors retain all intellectual
// property and proprietary rights in and to this material, related
// documentation and any modifications thereto. Any use, reproduction,
// disclosure or distribution of this material and related documentation
// without an express license agreement from NVIDIA CORPORATION or
// its affiliates is strictly prohibited.

syntax = "proto3";

package workflows.v1;

import "google/protobuf/timestamp.proto";

import "workflow.proto";
import "common_carbide.proto";
import "forge_carbide.proto";

option go_package = "github.com/nvidia/carbide-rest/workflow-schema/proto";

// CreateInfiniBandPartitionRequest - request parameters for InfiniBandPartition creation
message CreateInfiniBandPartitionRequest {
  // Name of the partition
  string name = 1;
  // ID of the Tenant org creating this Partition
  string tenant_organization_id = 2;
  // Workflow configurations
  optional WorkflowOptions options = 3;
  // ID of the partition
  common.UUID ib_partition_id = 4;
}

// DeleteInfiniBandPartitionRequest - request parameters to delete InfiniBandPartition
message DeleteInfiniBandPartitionRequest {
  // ID of the InfiniBandPartition to be deleted
  common.UUID id = 1;
  // Workflow configurations
  optional WorkflowOptions options = 2;
}

// GetInfiniBandPartition - request to get a specific InfiniBandPartition
message GetInfiniBandPartitionRequest {
  // ID of the InfiniBandPartition to be deleted
  common.UUID id = 1;
  // Workflow configurations
  optional WorkflowOptions options = 2;
}

// InfiniBandPartitionInfo - response for InfiniBandPartition create/update/delete request
message InfiniBandPartitionInfo {
  // Status of workflow execution
  WorkflowStatus status = 1;
  // Status if the object, if available
  ObjectStatus object_status = 2;
  // Status message
  string status_msg = 3;
  // Details of the InfiniBandPartition
  forge.IBPartition ib_partition = 4;
}

// InfiniBandPartitionInventory - inventory info of all InfiniBandPartitions on Site collected
// periodically
message InfiniBandPartitionInventory {
  // Status of Inventory
  InventoryStatus inventory_status = 1;
  // Status message
  string status_msg = 2;
  // Reported timestamp of InfiniBand Partition inventory
  google.protobuf.Timestamp timestamp = 3;
  // List of InfiniBand Partition
  repeated forge.IBPartition ib_partitions = 4;
  // Inventory page information
  InventoryPage inventory_page = 5;
}
